# chek-ego-miner

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  TODO.md
docs/: faq.md  (+20 more)
edge-orchestrator/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
edge-orchestrator/scripts/: verify_smoke.py
edge-orchestrator/specs/001-bootstrap-edge-orchestrator/: plan.md  quickstart.md  research.md  spec.md  tasks.md
edge-orchestrator/src/: auth.rs  calibration.rs  config.rs  host_metrics.rs  main.rs  operator.rs  path_safety.rs  reason.rs  sensing.rs  target.rs  token_authority.rs  upload_worker.rs
edge-orchestrator/src/api/: mod.rs  routes_association.rs  routes_calibration.rs  routes_chunk.rs  routes_control.rs  routes_esp32_ota.rs  routes_evolution.rs  routes_health.rs  routes_ingest.rs  routes_network.rs  routes_pairing_authority.rs  routes_safety.rs  routes_session.rs  routes_storage_compat.rs  routes_time.rs  routes_upload_chunk.rs  routes_upload_queue.rs  routes_workstation.rs
edge-orchestrator/src/control/: gate.rs  keepalive.rs  mod.rs  tasks.rs
edge-orchestrator/src/recorder/: chunk_state_machine.rs  mod.rs  session_recorder.rs  upload_queue.rs
edge-orchestrator/src/ws/: mod.rs  stream_fusion.rs  stream_teleop.rs  tasks.rs  transport.rs  types.rs
edge-orchestrator/tests/: contract.rs  integration.rs  unit.rs
edge-orchestrator/tests/contract/: test_api_contract.rs  test_protocol_guard.rs
edge-orchestrator/tests/integration/: test_capture_pose_ingest.rs  test_clip_validation.rs  test_deadman_timeout.rs  test_demo_capture_bundle.rs  test_disarm_gate.rs  test_fusion_debug_views.rs  test_session_metrics.rs  (+6 more)
ruview-unitree-bridge/: Cargo.toml  clippy.toml  protocol_pin.json  rustfmt.toml
ruview-unitree-bridge/config/: unitree.toml
ruview-unitree-bridge/src/: config.rs  lib.rs  main.rs  reason.rs
ruview-unitree-bridge/tests/: integration.rs  unit.rs
(+283 files in other folders)
