[package]
name = "edge-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros", "json", "multipart"] }
base64 = "0.22"
flate2 = "1.0"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
nalgebra = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sysinfo = "0.30"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urdf-rs = "0.9"
walkdir = "2.5"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = "0.24"
