[package]
name = "ruview-unitree-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
futures-util = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
nalgebra = "0.32"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urdf-rs = "0.9"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
